--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,8 +1,14 @@
 /* Write your global styles here, in PostCSS syntax */
+
+@tailwind base;
+/* Write your global styles here, in PostCSS syntax */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-	
 }
+
+@tailwind components;
+
+@tailwind utilities;
